# chipyard

./: .gitignore  .gitmodules  .scalafmt.conf  build.mill  chisel-warnings.conf  common.mk  pyproject.toml  setup_env.sh  variables.mk
generators/chipyard/src/main/scala/: DigitalTop.scala
generators/chipyard/src/main/scala/config/: AbstractConfig.scala  BoomConfigs.scala  MMIOAcceleratorConfigs.scala  SpikeConfigs.scala
generators/chipyard/src/main/scala/config/fragments/: TileFragments.scala
generators/chipyard/src/main/scala/harness/: HarnessBinders.scala
generators/chipyard/src/main/scala/iobinders/: IOBinders.scala  Ports.scala
generators/chipyard/src/main/scala/stage/: package.scala
generators/chipyard/src/main/scala/stage/phases/: PreElaboration.scala
generators/chipyard/src/main/scala/tdh/: BlockHarness.scala
generators/chipyard/src/main/scala/tdh/configs/: Adder.scala
scripts/: init-submodules-no-riscv-tools-nolog.sh  uniquify-module-names.py
sims/vcs/: Makefile
tools/cy-main/src/: Main.scala
tools/sram-generator/src/: Main.scala  MemConf.scala  SramGeneratorContainer.scala  SramMacro.scala
tools/sram-generator/src/parsers/: ConfParser.scala
tools/sram-generator/test/src/: CliTest.scala  ConfParserTest.scala
